--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Ultimate 555 calculator</title>
     <meta charset="UTF-8" />
 
-    <script src="src/index.js" type="text/javascript"></script>
-    <script src="src/calculate.js" type="text/javascript"></script>
+    <script src="src/index.js" type="module"></script>
+    <script src="src/calculate.js" type="module"></script>
   </head>
 
   <body>
