--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Ultimate 555 calculator</title>
     <meta charset="UTF-8" />
 
-    <script src="src/index.js" type="module"></script>
+    <script src="src/index.js"></script>
     <script src="src/calculate.js" type="module"></script>
   </head>
 
