moved css to html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Ultimate 555 calculator</title>
     <meta charset="UTF-8" />
-
+    <link rel="stylesheet" href="src/styles.css" />
     <script src="src/index.js"></script>
     <script src="src/calculate.js" type="module"></script>
   </head>
