--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="src/styles.css" />
     <script src="src/index.js"></script>
-    <script src="src/calculate.js" type="module"></script>
+    <script src="src/calculate.js"></script>
   </head>
 
   <body>
