Major Visual Overhaul (WIP)

--- a/index.html
+++ b/index.html
@@ -7,40 +7,15 @@
   </head>
 
   <body>
-    <div id="app">
-      <!--  <label for="c">Capacitor</label>
-      <input type="number" id="c" value="1" />
-      <br /><br />
+    <div class="header"><h>Ultimate 555 Calculator</h></div>
 
-      <label for="r1">Resistor 1</label>
-      <input type="number" id="r1" name="r1" value="1" />
-      <br /><br />
-
-      <label for="r2">Resistor 2</label>
-      <input type="number" id="r2" name="r2" value="1" />
-      <br /><br />
-
-      <label for="f">Frequency</label>
-      <input type="number" id="f" name="f " value="1" readonly />
-      <br /><br />
-
-      <label for="dc">Duty Cycle</label>
-      <input type="number" id="dc" name="dc" value="1" readonly />
-      <br /><br />
-
-      <label for="t">Time</label>
-      <input type="number" id="t" name="t" value="1" readonly />
-      <br /><br />
-
-      <label for="th">Time High</label>
-      <input type="number" id="th" name="th" value="1" readonly />
-      <br /><br />
-
-      <label for="tl">Time Low</label>
-      <input type="number" id="tl" name="tl" value="1" readonly />
-      <br /><br />-->
+    <div class="col-3 border">
+      <ul>
+        <li>Standard Astable</li>
+      </ul>
     </div>
-    
+
+    <div class="col-9 border" id="app"></div>
     <script src="src/index.js"></script>
     <script src="src/calculate.js"></script>
   </body>
