--- a/index.html
+++ b/index.html
@@ -7,16 +7,34 @@
   </head>
 
   <body>
-    <div class="header"><h>Ultimate 555 Calculator</h></div>
-
+    <div class="header"><h1>Ultimate 555 Calculator</h1></div>
     <div class="col-3 border">
       <ul>
-        <li>Standard Astable</li>
+        <li>
+          <button
+            class="col-12 menu"
+            onclick="document.location='astable.html'"
+          >
+            Astable
+          </button>
+        </li>
+        <li>
+          <button
+            class="col-12 menu"
+            onclick="document.location='astable2.html'"
+          >
+            Astable Reverse
+          </button>
+        </li>
       </ul>
     </div>
 
-    <div class="col-9 border" id="app"></div>
-    <script src="src/index.js"></script>
-    <script src="src/calculate.js"></script>
+    <div class="col-9 border" id="app">
+      <p>
+        Welcome to the Ultimate 555 calculator, where we offer several tools to
+        help you design the perfect 555 circuits
+      </p>
+      <p>Choose a tool from the menu to the right</p>
+    </div>
   </body>
 </html>
