--- a/astable.html
+++ b/astable.html
@@ -22,7 +22,18 @@
     </div>
 
     <div class="col-9 border" id="app"></div>
-    <script src="src/astable.js"></script>
+    <script src="src/astable.js">
+      var Fields = [
+        new Field("Capacitor", "c", false, Capacitor),
+        new Field("Resistor 1", "r1", false, Resistor),
+        new Field("Resistor 2", "r2", false, Resistor),
+        new Field("Frequency", "f", true, Frequency),
+        new Field("Duty Cycle", "dc", true),
+        new Field("Time", "t", true, Time),
+        new Field("Time High", "th", true, Time),
+        new Field("Time Low", "tl", true, Time)
+      ];
+    </script>
     <script src="src/calculate.js"></script>
   </body>
 </html>
