--- a/astable2.html
+++ b/astable2.html
@@ -18,6 +18,14 @@
             Astable
           </button>
         </li>
+        <li>
+          <button
+            class="col-12 menu"
+            onclick="document.location='astable2.html'"
+          >
+            Astable Reverse
+          </button>
+        </li>
       </ul>
     </div>
 
