--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         Welcome to the Ultimate 555 calculator, where we offer several tools to
         help you design the perfect 555 circuits
       </p>
-      <p>Choose a tool from the menu to the right</p>
+      <p>Choose a tool from the menu to the left</p>
     </div>
   </body>
 </html>
