--- a/astable.html
+++ b/astable.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Ultimate 555 calculator</title>
+    <meta name="description" content="A tool to help you with designing astable 555 timer circuits.">
+  <meta name="keywords" content="555 timer, circuits, electronics">
+  <meta name="author" content="Attila Sax">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
