--- a/astable.html
+++ b/astable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ultimate 555 calculator</title>
+    <title>Astable calculator || Ultimate 555 calculator</title>
     <meta name="description" content="A tool to help you with designing astable 555 timer circuits.">
   <meta name="keywords" content="555 timer, circuits, electronics">
   <meta name="author" content="Attila Sax">
