--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Ultimate 555 calculator</title>
+    <meta name="description" content="A site that has lot's of tools to help you with designing a 555 timer circuit">
+  <meta name="keywords" content="555 timer, circuits, electronics">
+  <meta name="author" content="Attila Sax">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
