--- a/astable.html
+++ b/astable.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<htmllang="en">
   <head>
     <title>Astable calculator || Ultimate 555 calculator</title>
     <meta name="description" content="A tool to help you with designing astable 555 timer circuits.">
