--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Ultimate 555 calculator</title>
     <meta name="description" content="A site that has lot's of tools to help you with designing a 555 timer circuit">
