--- a/astable2.html
+++ b/astable2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Reverse astable calculator || Ultimate 555 calculator</title>
     <meta name="description" content="A tool to help you with designing astable 555 timer circuits.">
